[TOAZ-45] Clean up gradle structure